# sensend

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
docs/: BUILD-GUIDE.md  EXPERIENCE.md  FILELIST.md
src/: App.vue  ConfigWindow.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: flowus.rs  lark.rs  local.rs  markdown.rs  mod.rs  notion.rs
src-tauri/src/commands/: font.rs  hotkey.rs  mod.rs  note.rs  platform.rs
src/components/: FontManager.vue  FooterBar.vue  HotkeyModal.vue  MentionList.vue  TitleBar.vue  ToastLayer.vue
src/composables/: useConfig.ts  useEditor.ts  useEditorFont.ts  useEditorFormat.ts  useHotkey.ts  usePlatform.ts  useToast.ts
src/styles/: editor.css  vars.css
src/types/: platform.ts
