[package]
name = "sensend"
version = "0.1.0"
description = "Sensend - 超轻量级桌面悬浮记事本"
authors = ["简乐 <jloft198479@gmail.com>"]
license = "MIT"
repository = "https://github.com/jloft/sensend"
edition = "2021"

[lib]
name = "sensend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
winreg = "0.55"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-global-shortcut = "2.3.1"
log = "0.4"